day-11/grafana-ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns    
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - grafana.kode.expert
    secretName: grafana-tls
  rules:
  - host: grafana.kode.expert
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
            service:
              name: grafana
              port:
                number: 3000
